--- a/3. 前端高薪工程师/01. 技术提升/01 HTML+CSS收官/05. 绝对定位/css/demo2.css
+++ b/3. 前端高薪工程师/01. 技术提升/01 HTML+CSS收官/05. 绝对定位/css/demo2.css
@@ -3,6 +3,10 @@
   padding: 0;
   box-sizing: border-box;
 }
+a{
+  text-decoration: none;
+  color: inherit;
+}
 .item{
   width: 230px;
   height: 140px;
