--- a/3. 前端高薪工程师/01. 技术提升/02 HTML+CSS项目实战/项目/css/topNav.css
+++ b/3. 前端高薪工程师/01. 技术提升/02 HTML+CSS项目实战/项目/css/topNav.css
@@ -11,12 +11,50 @@
   padding: 0 7px;
   border-right: 1px solid #424242;
 }
-.topNav-menu li:last-child a{
+.topNav-menu li:last-child a {
   border-right: none;
 }
-.topNav-menu li:first-child a{
+.topNav-menu li:first-child a {
   padding-left: 0;
 }
-.topNav-menu a:hover{
+.topNav-menu a:hover {
   color: #fff;
+}
+
+/* 购物车部分 */
+.topNav-car {
+  width: 128px;
+  height: 40px;
+  background-color: #424242;
+  margin-left: 13px;
+  position: relative;
+}
+.topNav-link {
+  width: 100%;
+  height: 100%;
+  display: block;
+  text-align: center;
+  line-height: 40px;
+}
+.topNav-detail{
+  width: 320px;
+  height: 100px;
+  background-color: #fff;
+  color: #ccc;
+  text-align: center;
+  line-height: 100px;
+  border: 1px solid #333;
+  position: absolute;
+  right: 0;
+  top: 40px;
+  border-top: 0;
+  display: none;
+}
+
+.topNav-car:hover .topNav-detail{
+  display: block;
+}
+
+.topNav-car:hover .topNav-link{
+  background-color: #fff;
 }
