--- a/3. 前端高薪工程师/01. 技术提升/02 HTML+CSS项目实战/项目/css/topNav.css
+++ b/3. 前端高薪工程师/01. 技术提升/02 HTML+CSS项目实战/项目/css/topNav.css
@@ -3,6 +3,8 @@
   height: 40px;
   color: #b0b0b0;
   font-size: 12px;
+  /* 这里是设置二级菜单定位的参考系 */
+  position: relative;
 }
 .topNav-menu {
   line-height: 40px;
