--- a/3. 前端高薪工程师/01. 技术提升/02 HTML+CSS项目实战/项目/css/banner2.css
+++ b/3. 前端高薪工程师/01. 技术提升/02 HTML+CSS项目实战/项目/css/banner2.css
@@ -1,7 +1,7 @@
 .banner2{
   padding-top: 14px;
   padding-bottom: 26px;
-  outline: 1px solid;
+  /* outline: 1px solid; */
 }
 .banner2-service{
   width: 234px;
