--- a/3. 前端高薪工程师/01. 技术提升/04 JS项目实战/01. 文字滚动效果/练习/index.css
+++ b/3. 前端高薪工程师/01. 技术提升/04 JS项目实战/01. 文字滚动效果/练习/index.css
@@ -19,7 +19,7 @@
   padding-right: 30px;
 }
 .list {
-  outline: 1px solid red;
+  /* outline: 1px solid red; */
   float: left;
   list-style: none;
   padding: 0;
@@ -31,7 +31,7 @@
   
 }
 .list li {
-  background-color: yellow;
+  /* background-color: yellow; */
   height: 30px;
   line-height: 30px;
   
