--- a/3. 前端高薪工程师/01. 技术提升/11 工程化/06. 分页电影列表案例/练习/src/cover/index.module.css
+++ b/3. 前端高薪工程师/01. 技术提升/11 工程化/06. 分页电影列表案例/练习/src/cover/index.module.css
@@ -1,3 +1,22 @@
-.cover {
-  color: aqua;
+/* ------------------------ 定位居中 ------------------------ */
+.container {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+}
+.container video {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.container .text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 4em;
+  color: #ed860ffc;
+  letter-spacing: 10px;
+  text-shadow: 0 0 5px white;
 }
