--- a/3. 前端高薪工程师/01. 技术提升/11 工程化/06. 分页电影列表案例/练习/src/cover/index.module.less
+++ b/3. 前端高薪工程师/01. 技术提升/11 工程化/06. 分页电影列表案例/练习/src/cover/index.module.less
@@ -1,3 +1,22 @@
-.cover{
-  color: aqua;
+@import '../common.less';
+
+@text-color:#ed860ffc;
+
+.container{
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  video{
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  .text{
+    .position-center();
+    font-size: 4em;
+    color: @text-color;
+    letter-spacing: 10px;
+    text-shadow: 0 0 5px white;
+  }
 }
