--- a/3. 前端高薪工程师/01. 技术提升/11 工程化/06. 分页电影列表案例/练习/src/common.css
+++ b/3. 前端高薪工程师/01. 技术提升/11 工程化/06. 分页电影列表案例/练习/src/common.css
@@ -1,1 +1,7 @@
 /* ------------------------ 定位居中 ------------------------ */
+.flex-column-center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
