--- a/3. 前端高薪工程师/01. 技术提升/11 工程化/06. 分页电影列表案例/练习/src/common.less
+++ b/3. 前端高薪工程师/01. 技术提升/11 工程化/06. 分页电影列表案例/练习/src/common.less
@@ -6,3 +6,10 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+.flex-column-center{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
