--- a/3. 前端高薪工程师/01. 技术提升/11 工程化/06. 分页电影列表案例/练习/src/movie/list/index.module.css
+++ b/3. 前端高薪工程师/01. 技术提升/11 工程化/06. 分页电影列表案例/练习/src/movie/list/index.module.css
@@ -1,4 +1,27 @@
+/* ------------------------ 定位居中 ------------------------ */
+.flex-column-center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 .container {
-  width: 90%;
-  margin: 0 auto;
+  width: 80%;
+  margin: 20px auto;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-row-gap: 30px;
+  text-align: center;
+}
+.container img {
+  width: 200px;
+  height: 300px;
+  object-fit: cover;
+}
+.container .title {
+  margin: 10px 0;
+  font-size: 20px;
+}
+.container .rate {
+  color: chocolate;
 }
