--- a/3. 前端高薪工程师/01. 技术提升/11 工程化/06. 分页电影列表案例/练习/src/movie/list/index.module.less
+++ b/3. 前端高薪工程师/01. 技术提升/11 工程化/06. 分页电影列表案例/练习/src/movie/list/index.module.less
@@ -1,6 +1,25 @@
-.container{
-  width: 90%;
-  margin: 0 auto;
+@import "../../common.less";
+.container {
+  width: 80%;
+  margin: 20px auto;
   // height: 100vh;
   // background-color: #ee5050;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-row-gap: 30px;
+  text-align: center;
+
+  img {
+    width: 200px;
+    height: 300px;
+    object-fit: cover;
+  }
+  .title {
+    margin: 10px 0;
+    font-size: 20px;
+  }
+  .rate {
+    color: chocolate;
+  }
 }
+
