--- a/3. 前端高薪工程师/01. 技术提升/11 工程化/06. 分页电影列表案例/练习/src/cover/index.module.css
+++ b/3. 前端高薪工程师/01. 技术提升/11 工程化/06. 分页电影列表案例/练习/src/cover/index.module.css
@@ -1,4 +1,10 @@
 /* ------------------------ 定位居中 ------------------------ */
+.flex-column-center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 .container {
   position: relative;
   width: 100%;
@@ -15,7 +21,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: 4em;
+  font-size: 3.5em;
   color: #ed860ffc;
   letter-spacing: 10px;
   text-shadow: 0 0 5px white;
