--- a/3. Advanced Front-end Developer/02. 就业提升/07 React/04. Hook/react-learn/src/App copy.css
+++ b/3. Advanced Front-end Developer/02. 就业提升/07 React/04. Hook/react-learn/src/App copy.css
@@ -1,20 +1,28 @@
 /* App.css */
-.enter {
-  opacity: 0;
-}
-.enter-active{
-  opacity: 1;
-  transition: 2s;
-}
 
-.exit {
-  opacity: 1;
+.container{
+  width: 100px;
+  margin: 0 auto;
+}
+.comp-container{
+  position: relative;
+  height: 100px;
+}
+.title{
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 .exit-active{
   opacity: 0;
-  transition: 2s;
+  transition: 1s;
+}
+.enter,.appear{
+  opacity: 0;
+  
+}
+.enter-active,.appear-active{
+  opacity: 1;
+  transition: 1s;
 }
 
-.exit-done{
-  opacity: 0;
-}
