--- a/3. Advanced Front-end Developer/02. 就业提升/07 React/05. Router/react-learn/06. 电影列表查询demo/components/MovieDetial/index.css
+++ b/3. Advanced Front-end Developer/02. 就业提升/07 React/05. Router/react-learn/06. 电影列表查询demo/components/MovieDetial/index.css
@@ -1,9 +1,9 @@
-.imgHeader {
+.detail_header {
   margin: 20px auto;
   text-align: center;
   line-height: 40px;
 }
-.imgContainer {
+.detail_container {
   width: 80%;
   margin: 20px auto;
   padding: 20px 0;
@@ -14,16 +14,16 @@
   grid-row-gap: 30px;
   text-align: center;
 }
-.imgContainer img {
+.detail_container img {
   width: 200px;
   height: 300px;
   object-fit: cover;
 }
-.imgContainer .title {
+.detail_container .title {
   margin: 10px 0;
   font-size: 20px;
 }
-.imgContainer .rate {
+.detail_container .rate {
   color: chocolate;
   font-size: 16px;
 }
