--- a/3. Advanced Front-end Developer/02. 就业提升/07 React/05. Router/react-learn/06. 电影列表查询demo/components/MovieDetial/index.less
+++ b/3. Advanced Front-end Developer/02. 就业提升/07 React/05. Router/react-learn/06. 电影列表查询demo/components/MovieDetial/index.less
@@ -1,29 +1,34 @@
-.imgHeader {
+
+
+.detail_header{
   margin: 20px auto;
   text-align: center;
   line-height: 40px;
 }
-.imgContainer {
+
+.detail_container {
   width: 80%;
   margin: 20px auto;
   padding: 20px 0;
+  // height: 100vh;
   background-color: rgba(234, 241, 242, 0.5);
   border-radius: 20px;
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   grid-row-gap: 30px;
   text-align: center;
-}
-.imgContainer img {
-  width: 200px;
-  height: 300px;
-  object-fit: cover;
-}
-.imgContainer .title {
-  margin: 10px 0;
-  font-size: 20px;
-}
-.imgContainer .rate {
-  color: chocolate;
-  font-size: 16px;
+
+  img {
+    width: 200px;
+    height: 300px;
+    object-fit: cover;
+  }
+  .title {
+    margin: 10px 0;
+    font-size: 20px;
+  }
+  .rate {
+    color: chocolate;
+    font-size: 16px;
+  }
 }
