--- a/3. Advanced Front-end Developer/02. 就业提升/07 React/05. Router/react-learn/13. 常见应用-滚动条复位/pages/Pages.css
+++ b/3. Advanced Front-end Developer/02. 就业提升/07 React/05. Router/react-learn/13. 常见应用-滚动条复位/pages/Pages.css
@@ -1,7 +1,12 @@
 .header {
+  position: fixed;
+  left: 0;
+  top: 0;
   background: #008c8c;
   line-height: 50px;
   text-align: center;
+  z-index: 999;
+  
 }
 
 .header a {
@@ -17,10 +22,10 @@
 
 .page {
   width: 100%;
-  height: 300px;
   position: absolute;
   left: 0;
   top: 0;
+  border: 2px solid #000;
 }
 
 .page h1{
@@ -35,8 +40,4 @@
 
 .news{
   background: lightgreen;
-}
-
-.personal{
-  background: lightpink;
 }
